--- a/css/styles.css
+++ b/css/styles.css
@@ -101,11 +101,15 @@ body{
     border-bottom-right-radius: 3rem;
     padding: 3rem;
     color: var(--White);
+    position: relative;
+    margin-bottom: -5rem;
 }
 
 @media (min-width: 375px) {
     .contenido-principal {
-        border-radius: 3rem;     
+        border-radius: 3rem;
+        margin: 0;
+        margin-right: -3rem; 
     }
 }
 
@@ -158,7 +162,7 @@ body{
 
 .summary {
     background-color: var(--White);
-    padding: 2rem;  
+    padding: 7rem 2rem 2rem 2rem;  
     font-size: 1.4rem;
 }
 
@@ -166,6 +170,7 @@ body{
     .summary {
         border-top-right-radius: 3rem;
         border-bottom-right-radius: 3rem;
+        padding: 2rem 2rem 2rem 5rem;
         -webkit-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
         -moz-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
         box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
