--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,12 @@ body{
         margin: 0 auto;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        background-color: var(--White);
+        border-top-right-radius: 3rem;
+        border-bottom-right-radius: 3rem;
+        -webkit-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
+        -moz-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
+        box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
     }
 }
 
@@ -99,14 +105,12 @@ body{
     padding: 3rem;
     color: var(--White);
     position: relative;
-    margin-bottom: -5rem;
 }
 
 @media (min-width: 375px) {
     .result {
         border-radius: 3rem;
         margin: 0;
-        margin-right: -3rem; 
     }
 }
 
@@ -158,20 +162,8 @@ body{
 /* Summary */
 
 .summary {
-    background-color: var(--White);
-    padding: 7rem 2rem 2rem 2rem;  
+    padding: 2rem;  
     font-size: 1.4rem;
-}
-
-@media (min-width: 375px) {
-    .summary {
-        border-top-right-radius: 3rem;
-        border-bottom-right-radius: 3rem;
-        padding: 2rem 2rem 2rem 5rem;
-        -webkit-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
-        -moz-box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
-        box-shadow: 26px 26px 147px -49px rgba(54,32,117,0.55);
-    }
 }
 
 .summary__titulo {
